src/test/deca/context/valid/LE/boolfield.deca
// Description:
//    test les attributs boolean
//
// Resultats:
//    
//
// Historique:
//    cree le 19/01/2022

class A {
    protected boolean x ;
    boolean y = true;
}
