src/test/deca/context/invalid/SO/mauvaisNot.deca
// Description:
//    tests de programme incorrect contextuellement
//
// Resultats:
//    ligne 10 : Erreur, mauvais opérande
//
// Historique:
//    cree le 10/01/2022
{
    boolean a = !2;
}